<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="loadMore">LoadMore</string>
    <string name="enterStringResource">Enter Search String</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="imageSize">Image Size</string>
    <string name="submit">Submit</string>
    <string name="sizeID">Image Size</string>
    <string name="colorID">Color Filter</string>
    <string name="typeID">Image Type</string>
    
    <string name="size_prompt">Choose a country</string>
    <string-array name="image_size">
        <item>large</item>
        <item>medium</item>
        <item>small</item>
        <item>xlarge</item>
    </string-array>

    <string name="color_prompt">Choose a Color</string>
    <string-array name="color_filter">
        <item>white</item>
        <item>brown</item>
        <item>blue</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>purple</item>
        <item>pink</item>
        <item>red</item>
        <item>black</item>
        <item>teal</item>
        <item>yellow</item>
    </string-array>

    <string name="type_prompt">Choose a country</string>
    <string-array name="type_filter">
        <item>photo</item>
        <item>face</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="siteID">Site Filter</string>
        <string name="defaultSite">www.google.com</string>
</resources>